--- a/css/index.css
+++ b/css/index.css
@@ -317,9 +317,12 @@ div.ftrWrap>div.footer>div.sns>i{}
 
 
 /* 태블릿 기준으로 1024px의 미디어 쿼리 생성 */
-@media screen and (max-width :1024px) {
+@media screen and (max-width:1024px){
+    div.cntWrap>div.content>div.header>p{
+        width: 100%;
+    }
     div.cntWrap{
-        margin-top: 40px;   
+        margin-top: 40px;
     }
     div.cntWrap>div.content.cnt01>div.section>div.artTop>div.article:nth-of-type(2){
         display: none;
@@ -335,14 +338,86 @@ div.ftrWrap>div.footer>div.sns>i{}
     }
     div.cntWrap>div.content.cnt02>div.section>div.article>div.image{
         width: 100%;
+        height: 600px;
+    }
+    div.cntWrap>div.content.cnt02>div.header>p{
+        width: 80%;
+        max-width: none;
     }
     div.cntWrap>div.content.cnt03>div.header{
         display: none;
     }
     div.cntWrap>div.content.cnt03>div.section>div.article{
-        width: calc(30%-20px);
+        width: calc(50% - 10px);
     }
     div.cntWrap>div.content.cnt03>div.section{
+        /* 다음줄로 넘길때 flex : wrap을 씁니다. */
         flex-wrap: wrap;
+        row-gap: 40px;
+        justify-content: space-between;
+    }
+    div.ftrWrap{
+        padding-bottom: 40px;
+    }
+}
+
+/* 모바일 기준 */
+@media screen and (max-width:500px){
+    div.cntWrap>div.content>div.header>h2{
+        line-height: 40px;
+        font-size: 25px;
+    }
+    div.hdrTopWrap>div.hdrTop, 
+    div.headerWrap>div.header,
+    div.cntWrap>div.content,
+    div.ftrWrap>div.footer{
+        width: 90%;
+    }
+    div.cntWrap>div.content>div.section{
+        margin-top: 20px;
+    }
+    div.cntWrap>div.content.cnt01>div.section>div.artBtm{
+        display: none;
+    }
+    div.cntWrap>div.content.cnt01>div.section>div.artTop>div.article:nth-of-type(2){
+        display: block;
+    }
+    div.cntWrap>div.content.cnt01>div.section>div.artTop{
+        flex-wrap: wrap;
+        column-gap: 0;
+        row-gap: 20px;
+    }
+    div.cntWrap>div.content.cnt01>div.section>div.artTop>div.article>div.texts{
+        display: none;
+    }
+    div.cntWrap>div.content.cnt01>div.section>div.artTop>div.article{
+        width: 100%;
+    }
+    div.cntWrap>div.content.cnt02>div.section{
+        margin-top: 0;
+        width: 90%;
+    }
+    div.cntWrap>div.content.cnt02>div.header{
+        padding-top: 80px;
+        padding-bottom: 80px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    div.cntWrap>div.content.cnt02>div.section>div.article>div.image{
+        height: 240px;
+    }
+    div.cntWrap>div.content.cnt03>div.section>div.article{
+        width: 100%;
+    }
+    div.ftrWrap>div.footer>p{
+        height: 80px;
+        width: 100%;
+    }
+    div.headerWrap>div.header>ul>li{
+        display: none;
+    }
+    div.headerWrap>div.header>ul>li:nth-of-type(4){
+        display: block;
+        font-size: 30px;
     }
 }
